chapter-3/exercise-2.5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: log-output-app-ns
  name: log-output-app-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - name: log-app
      port: 2345
      protocol: TCP
      targetPort: 8081
    - name: ping-app
      port: 2346
      protocol: TCP
      targetPort: 8082
